--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -39,7 +39,7 @@
         <% end %>
       <% end %>
 
-      <h2 class="mt-3">New book</h2>
+      <h2 class="new-book mt-3">New book</h2>
 
       <%= form_with model: Book.new, local: true do |f| %>
         <p>Title</p>
