--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// ページ左側のnew book
 .new-book {
   padding: 0.2em 0.5em;/*文字の上下 左右の余白*/
   color: #494949;/*文字色*/
@@ -9,3 +10,21 @@
   border-left: solid 5px #7db4e6;/*左線*/
   border-bottom: solid 3px #d7d7d7;/*下線*/
 }
+
+// ソート機能
+.styled-paragraph {
+  color: #505050;/*文字色*/
+  padding: 0.9em;/*文字周りの余白*/
+  display: inline-block;
+  line-height: 1.3;/*行高*/
+  background: #dbebf8;/*背景色*/
+  vertical-align: middle;
+  border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
+}
+
+.styled-paragraph:before {
+  content: '●';
+  color: white;
+  margin-right: 8px;
+}
+
