--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+//一覧ページ
+.user-heading {
+  position: relative;
+  padding: 0.3em;
+  background: #EEE;
+}
+
+.user-heading:after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 30px;
+  border: 15px solid transparent;
+  border-top: 15px solid #EEE;
+  width: 0;
+  height: 0;
+}
