--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'books/list', user: @user, book: @book %>
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
+      <h2 class="book-heading">Books</h2>
 
         <table class="table">
           <thead>
